fix conference entry badge overflow
closes #484

--- a/dh_abstracts/app/abstracts/static/css/main.scss
+++ b/dh_abstracts/app/abstracts/static/css/main.scss
@@ -68,6 +68,7 @@ nav.navbar {
 .badge.completion-status {
   text-transform: uppercase;
   border-radius: 20px;
+  width: 100%;
 }
 
 // Navbar
